--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+
+    <noscript>Ваш браузер не поддерживает скрипты или оно отключено!</noscript>
   </body>
 </html>
